@@ -1,6 +1,7 @@
 2009-09-09 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add replacement a -> e to spelling suggestions.
+	* Add double character replacements.
 
 2009-09-06 Harri Pitkänen <hatapitk@iki.fi>
 
